--- a/examples/index.html
+++ b/examples/index.html
@@ -156,6 +156,45 @@ var canvas = new Canvas(element);</pre>
     </script>
 
     <h3>
+      Polygons
+    </h3>
+
+    <script type="text/javascript">
+      var canvas = createCanvas();
+
+      canvas
+        .setWidth(100)
+        .setHeight(100)
+        .fillRegularPoly(45, 45, 25, 6, false, RED)
+        .strokeRegularPoly(55, 55, 25, 6, false, BLACK);
+    </script>
+
+    <script type="text/javascript">
+      var canvas = createCanvas();
+
+      canvas
+        .setWidth(100)
+        .setHeight(100)
+        .setFill(GREEN)
+        .setStroke(BLACK)
+        .fillRegularPoly(45, 45, 30, 5, false)
+        .strokeRegularPoly(55, 55, 30, 5, true);
+    </script>
+
+    <script type="text/javascript">
+      var canvas = createCanvas();
+
+      canvas
+        .setWidth(100)
+        .setHeight(100)
+        .setFill(BLUE)
+        .setStroke(BLACK)
+        .plotRegularPoly(50, 50, 20, 8)
+        .fill()
+        .stroke();
+    </script>
+
+    <h3>
       Pixel
     </h3>
 
