--- a/examples/index.html
+++ b/examples/index.html
@@ -156,7 +156,7 @@ var canvas = new Canvas(element);</pre>
     </script>
 
     <h3>
-      Polygons
+      Regular polygons
     </h3>
 
     <script type="text/javascript">
