Rename poly and fix counter clockwise drawing

--- a/examples/index.html
+++ b/examples/index.html
@@ -156,7 +156,7 @@ var canvas = new Canvas(element);</pre>
     </script>
 
     <h3>
-      Regular polygons
+      Polygons
     </h3>
 
     <script type="text/javascript">
@@ -165,8 +165,8 @@ var canvas = new Canvas(element);</pre>
       canvas
         .setWidth(100)
         .setHeight(100)
-        .fillRegularPoly(45, 45, 25, 3, false, RED)
-        .strokeRegularPoly(55, 55, 25, 4, false, BLACK);
+        .fillPoly(45, 45, 25, 3, false, RED)
+        .strokePoly(55, 55, 25, 4, false, BLACK);
     </script>
 
     <script type="text/javascript">
@@ -177,8 +177,8 @@ var canvas = new Canvas(element);</pre>
         .setHeight(100)
         .setFill(GREEN)
         .setStroke(BLACK)
-        .fillRegularPoly(45, 45, 30, 5, false)
-        .strokeRegularPoly(55, 55, 30, 6, true);
+        .fillPoly(45, 45, 30, 5, false)
+        .strokePoly(55, 55, 30, 6, true);
     </script>
 
     <script type="text/javascript">
@@ -189,7 +189,7 @@ var canvas = new Canvas(element);</pre>
         .setHeight(100)
         .setFill(BLUE)
         .setStroke(BLACK)
-        .plotRegularPoly(50, 50, 20, 8)
+        .plotPoly(50, 50, 20, 8)
         .fill()
         .stroke();
     </script>
