--- a/examples/index.html
+++ b/examples/index.html
@@ -195,7 +195,7 @@ var canvas = new Canvas(element);</pre>
     </script>
 
     <h3>
-      Star
+      Burst
     </h3>
 
     <script type="text/javascript">
@@ -204,8 +204,8 @@ var canvas = new Canvas(element);</pre>
       canvas
         .setWidth(100)
         .setHeight(100)
-        .fillStar(45, 45, 25, 10, 3, false, RED)
-        .strokeStar(55, 55, 25, 10, 4, false, BLACK);
+        .fillBurst(45, 45, 25, 10, 3, false, RED)
+        .strokeBurst(55, 55, 25, 10, 4, false, BLACK);
     </script>
 
     <script type="text/javascript">
@@ -216,8 +216,8 @@ var canvas = new Canvas(element);</pre>
         .setHeight(100)
         .setFill(GREEN)
         .setStroke(BLACK)
-        .fillStar(45, 45, 30, 15, 5, false)
-        .strokeStar(55, 55, 30, 15, 6, true);
+        .fillBurst(45, 45, 30, 5, 5, false)
+        .strokeBurst(55, 55, 30, 20, 6, true);
     </script>
 
     <script type="text/javascript">
@@ -228,7 +228,7 @@ var canvas = new Canvas(element);</pre>
         .setHeight(100)
         .setFill(BLUE)
         .setStroke(BLACK)
-        .plotStar(50, 50, 20, 10, 8)
+        .plotBurst(50, 50, 20, 15, 20)
         .fill()
         .stroke();
     </script>
