--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Canvas</title>
+  <title>Canvasimo</title>
   <link rel="stylesheet" href="demo-only-stuff/styles.css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
