--- a/examples/index.html
+++ b/examples/index.html
@@ -25,14 +25,14 @@
     </h2>
 
     <h3>
-      Create a new sensible canvas interface
+      Create a new canvasimo instance
     </h3>
 
-    <pre>var Canvas = require('sensible-canvas-interface');
+    <pre>var Canvasimo = require('canvasimo');
 
 var element = document.getElementById('canvas');
 
-var canvas = new Canvas(element);</pre>
+var canvas = new Canvasimo(element);</pre>
 
     <h2>
       Solid shape methods
