Begin generating docs

--- a/examples/index.html
+++ b/examples/index.html
@@ -577,6 +577,8 @@ var canvas = new Canvasimo(element);</pre>
 
   </div>
 
+  <script do-not-document="true" type="text/javascript" src="demo-only-stuff/docs.js"></script>
+  <script do-not-document="true" type="text/javascript" src="demo-only-stuff/generate-docs.js"></script>
   <script do-not-document="true" type="text/javascript" src="demo-only-stuff/display-source.js"></script>
 
 </body>
